k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-frontend
  namespace: dexbot

spec:
  selector:
    app: dex-frontend

  type: NodePort

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
